Fix: the overflow right for the mobile widths

--- a/frontend/theme/extras/footer.less
+++ b/frontend/theme/extras/footer.less
@@ -376,7 +376,7 @@
         width: 50% !important;
       }
       .image-wrapper-small {
-        width: 200px !important;
+        width: 130px !important;
       }
     }
     @media screen and (min-width: 768px) and (max-width: 992px){
